--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,4 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
       - name: Test
-        id: sbt
-        uses: lokkju/github-action-sbt@11-1.3.0-2.13.0
-        with:
-          commands: test
+        run "sbt test"
