--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
       - name: Test
-        run "sbt test"
+        run: "sbt test"
