--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,7 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: Test
         run: "sbt test"
+      - name: Reattach HEAD
+        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
+      - name: Show
+        run: git rev-parse --abbrev-ref HEAD
