--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,15 +1,17 @@
 name: Package Build
 # This workflow is triggered on pushes to the repository.
 on: 
-  pull_request:
+  push:
 
 jobs:
   build:
     runs-on: ubuntu-20.04
-    name: Build
+    name: Check
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
-      - name: Test
-        run: "sbt test"
+      - name: Reattach HEAD
+        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
+      - name: Show
+        run: git rev-parse --abbrev-ref HEAD
