--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,15 +11,18 @@ jobs:
         with:
           fetch-depth: 0
       - name: Reattach HEAD
+        if: github.event.ref_type == 'tag'
         run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
       - uses: olafurpg/setup-scala@v10
         if: github.event.ref_type == 'tag'
       - uses: olafurpg/setup-gpg@v3
         if: github.event.ref_type == 'tag'
-      - run: sbt ci-release
-        if: github.event.ref_type == 'tag'
-        env:
-          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-          PGP_SECRET: ${{ secrets.PGP_SECRET }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+      - name: Show
+        run: git rev-parse --abbrev-ref HEAD
+#      - run: sbt ci-release
+#        if: github.event.ref_type == 'tag'
+#        env:
+#          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+#          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+#          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+#          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
