--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,8 @@
 name: Package Build
 # This workflow is triggered on pushes to the repository.
 on: 
-  push:
+  release: 
+    types: [published]
 
 jobs:
   build:
@@ -15,3 +16,7 @@ jobs:
         run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
       - name: Show
         run: git rev-parse --abbrev-ref HEAD
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
