--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,8 +1,7 @@
-name: Package Build
+name: Diagnostic
 # This workflow is triggered on pushes to the repository.
 on: 
-  release: 
-    types: [published]
+  pull_request: 
 
 jobs:
   build:
