--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,9 +10,10 @@ jobs:
         if: github.event.ref_type == 'tag'
         with:
           fetch-depth: 0
-      - name: Reattach HEAD
-        if: github.event.ref_type == 'tag'
-        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
+          ref: ${{ github.event.pull_request.head.ref }}
+#      - name: Reattach HEAD
+#        if: github.event.ref_type == 'tag'
+#        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
       - uses: olafurpg/setup-scala@v10
         if: github.event.ref_type == 'tag'
       - uses: olafurpg/setup-gpg@v3
