fix release script

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,16 +19,13 @@ jobs:
         if: github.event.ref_type == 'tag'
       - uses: olafurpg/setup-gpg@v3
         if: github.event.ref_type == 'tag'
-      - name: Show
-        if: github.event.ref_type == 'tag'
-        run: sbt publishLocal
 #      - name: Show
 #        if: github.event.ref_type == 'tag'
 #        run: git rev-parse --abbrev-ref HEAD
-#      - run: sbt ci-release
-#        if: github.event.ref_type == 'tag'
-#        env:
-#          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-#          PGP_SECRET: ${{ secrets.PGP_SECRET }}
-#          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-#          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+      - run: sbt ci-release
+        if: github.event.ref_type == 'tag'
+        env:
+          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
