--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,11 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
+      - name: Setup JDK 13
+        uses: actions/setup-java@v1
+        with:
+          java-version: '13'
+      - name: Show java
+        run: "java -version"
       - name: Test
         run: "sbt test"
