--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup JDK 13
-        uses: actions/setup-java@v1
+      - name: Setup Java (zulu@13)
+        if: matrix.java == 'zulu@8'
+        uses: actions/setup-java@v3
         with:
-          java-version: '13'
+          distribution: zulu
+          java-version: 13
 
       - name: Cache sbt
         uses: actions/cache@v3
